tests/snapshots/formats__kdbx__aeskdf-aes.kdbx.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ aeskdf-aes.kdbx — KeePass KDBX 4.0, AES-256-CBC, AES-KDF, 1000 rounds  [0x0+0x727]
    Signature 1: 0x9aa2d903  [0x0+0x4]
    Signature 2: 0xb54bfb67  [0x4+0x4]
    Minor version: 0  [0x8+0x2]
    Major version: 4  [0xa+0x2]
    Cipher ID: "AES-256-CBC"  [0xc+0x15] → 0x11+0x10
    Compression flags: gzip (0x1)  [0x21+0x9] → 0x26+0x4
    Master seed — 32 bytes  [0x2a+0x25] → 0x2f+0x20
    Encryption IV — 16 bytes  [0x4f+0x15] → 0x54+0x10
  ▾ KDF parameters — AES-KDF, 1000 rounds  [0x64+0x62] → 0x69+0x5d
      Version: 0x100  [0x69+0x2]
      $UUID: "AES-KDF"  [0x6b+0x1e]
      R: 1000  [0x89+0x12]
      S — Bytes, 32 bytes  [0x9b+0x2a]
    End of header — 4 bytes  [0xc6+0x9] → 0xcb+0x4
    Header SHA-256 — matches  [0xcf+0x20]
    Header HMAC-SHA-256 — checked with the key when unlocked  [0xef+0x20]
  ▾ Payload — unlocked  [0x10f+0x618]
    ▾ HMAC block stream — 2 blocks, HMAC verified  [0x10f+0x618]
        Block 0 — 1488 bytes  [0x10f+0x5f4] → 0x133+0x5d0
        Block 1 — end  [0x703+0x24] → 0x727+0x0
      Decrypted — AES-256-CBC, 1478 bytes  [#2:0x0+0x5c6]
      Decompressed — gzip, 6981 bytes  [#3:0x0+0x1b45]
    ▾ Inner header — 1 attachment  [#3:0x0+0x73]
      ▾ Binary 0 — 26 bytes  [#3:0x0+0x20] → #3:0x5+0x1b
          Flags: 0x0 []  [#3:0x5+0x1]
        ▾ Content — UTF-8 text, LF line endings, 1 line  [#3:0x6+0x1a]
            Encoding: "UTF-8"
            Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
          ▾ Lines — 1 line  [#3:0x6+0x1a]
              Line 1: "Hello from an attachment."  [#3:0x6+0x19]
        Inner random stream ID: ChaCha20 (0x3)  [#3:0x20+0x9] → #3:0x25+0x4
        Inner random stream key — 64 bytes  [#3:0x29+0x45] → #3:0x2e+0x40
        End of header — 0 bytes  [#3:0x6e+0x5] → #3:0x73+0x0
    ▾ XML — XML document, root <KeePassFile>  [#3:0x73+0x1ad2]
      ▾ KeePassFile — 2 elements  [#3:0x73+0x1ad2]
        ▾ Meta — 25 elements  [#3:0x80+0x5b0]
            Generator: "KeePassXC"  [#3:0x86+0x20]
            DatabaseName: "Passwords"  [#3:0xa6+0x26]
            DatabaseNameChanged: "246s1Q4AAAA="  [#3:0xcc+0x37]
            DatabaseDescription  [#3:0x103+0x16]
            DatabaseDescriptionChanged: "0o6s1Q4AAAA="  [#3:0x119+0x45]
            DefaultUserName  [#3:0x15e+0x12]
            DefaultUserNameChanged: "0o6s1Q4AAAA="  [#3:0x170+0x3d]
            MaintenanceHistoryDays: "365"  [#3:0x1ad+0x34]
            Color  [#3:0x1e1+0x8]
            MasterKeyChanged: "2XjK3Q4AAAA="  [#3:0x1e9+0x31]
            MasterKeyChangeRec: "-1"  [#3:0x21a+0x2b]
            MasterKeyChangeForce: "-1"  [#3:0x245+0x2f]
          ▾ MemoryProtection — 5 elements  [#3:0x274+0xd6]
              ProtectTitle: "False"  [#3:0x286+0x22]
              ProtectUserName: "False"  [#3:0x2a8+0x28]
              ProtectPassword: "True"  [#3:0x2d0+0x27]
              ProtectURL: "False"  [#3:0x2f7+0x1e]
              ProtectNotes: "False"  [#3:0x315+0x22]
            CustomIcons  [#3:0x34a+0xe]
            RecycleBinEnabled: "True"  [#3:0x358+0x2b]
            RecycleBinUUID: "AAAAAAAAAAAAAAAAAAAAAA=="  [#3:0x383+0x39]
            RecycleBinChanged: "0o6s1Q4AAAA="  [#3:0x3bc+0x33]
            EntryTemplatesGroup: "AAAAAAAAAAAAAAAAAAAAAA=="  [#3:0x3ef+0x43]
            EntryTemplatesGroupChanged: "0o6s1Q4AAAA="  [#3:0x432+0x45]
            LastSelectedGroup: "AAAAAAAAAAAAAAAAAAAAAA=="  [#3:0x477+0x3f]
            LastTopVisibleGroup: "AAAAAAAAAAAAAAAAAAAAAA=="  [#3:0x4b6+0x43]
            HistoryMaxItems: "10"  [#3:0x4f9+0x25]
            HistoryMaxSize: "6291456"  [#3:0x51e+0x28]
            SettingsChanged: "0o6s1Q4AAAA="  [#3:0x546+0x2f]
          ▾ CustomData — 2 elements  [#3:0x575+0xb4]
            ▾ Item — 2 elements  [#3:0x581+0x4a]
                Key: "KPXC_DECRYPTION_TIME_PREFERENCE"  [#3:0x587+0x2a]
                Value: "1000"  [#3:0x5b1+0x13]
            ▾ Item — 2 elements  [#3:0x5cb+0x51]
                Key: "_LAST_MODIFIED"  [#3:0x5d1+0x19]
                Value: "Sun Jan 12 03:51:58 2020 GMT"  [#3:0x5ea+0x2b]
        ▾ Root — 2 elements  [#3:0x630+0x1507]
          ▾ Group — 13 elements  [#3:0x636+0x14e9]
              UUID: "F69os494TDK6douojK65vQ=="  [#3:0x63d+0x25]
              Name: "Root"  [#3:0x662+0x11]
              Notes  [#3:0x673+0x8]
              IconID: "48"  [#3:0x67b+0x13]
            ▾ Times — 7 elements  [#3:0x68e+0x124]
                LastModificationTime: "0o6s1Q4AAAA="  [#3:0x695+0x39]
                CreationTime: "0o6s1Q4AAAA="  [#3:0x6ce+0x29]
                LastAccessTime: "0o6s1Q4AAAA="  [#3:0x6f7+0x2d]
                ExpiryTime: "0o6s1Q4AAAA="  [#3:0x724+0x25]
                Expires: "False"  [#3:0x749+0x18]
                UsageCount: "0"  [#3:0x761+0x1a]
                LocationChanged: "0o6s1Q4AAAA="  [#3:0x77b+0x2f]
              IsExpanded: "True"  [#3:0x7b2+0x1d]
              DefaultAutoTypeSequence  [#3:0x7cf+0x1a]
              EnableAutoType: "null"  [#3:0x7e9+0x25]
              EnableSearching: "null"  [#3:0x80e+0x27]
              LastTopVisibleEntry: "AAAAAAAAAAAAAAAAAAAAAA=="  [#3:0x835+0x43]
            ▾ Group — 5 elements  [#3:0x878+0xdcb]
                UUID: "MovbH7BaH6Kl40IwgP44mw=="  [#3:0x87f+0x25]
              ▾ Times — 7 elements  [#3:0x8a4+0x124]
                  CreationTime: "2XjK3Q4AAAA="  [#3:0x8ab+0x29]
                  LastModificationTime: "2XjK3Q4AAAA="  [#3:0x8d4+0x39]
                  LastAccessTime: "2XjK3Q4AAAA="  [#3:0x90d+0x2d]
                  ExpiryTime: "2XjK3Q4AAAA="  [#3:0x93a+0x25]
                  Expires: "False"  [#3:0x95f+0x18]
                  UsageCount: "0"  [#3:0x977+0x1a]
                  LocationChanged: "2XjK3Q4AAAA="  [#3:0x991+0x2f]
                Name: "Web"  [#3:0x9c8+0x10]
              ▾ Group — 4 elements  [#3:0x9d8+0x898]
                  UUID: "X4aA1B+nEZOWXKQe1UwmZA=="  [#3:0x9df+0x25]
                ▾ Times — 7 elements  [#3:0xa04+0x124]
                    CreationTime: "2XjK3Q4AAAA="  [#3:0xa0b+0x29]
                    LastModificationTime: "2XjK3Q4AAAA="  [#3:0xa34+0x39]
                    LastAccessTime: "2XjK3Q4AAAA="  [#3:0xa6d+0x2d]
                    ExpiryTime: "2XjK3Q4AAAA="  [#3:0xa9a+0x25]
                    Expires: "False"  [#3:0xabf+0x18]
                    UsageCount: "0"  [#3:0xad7+0x1a]
                    LocationChanged: "2XjK3Q4AAAA="  [#3:0xaf1+0x2f]
                  Name: "Mail"  [#3:0xb28+0x11]
                ▾ Entry — 10 elements  [#3:0xb39+0x72f]
                    UUID: "e0bWt/qXFx+JDq96mlfoNQ=="  [#3:0xb40+0x25]
                  ▾ Times — 7 elements  [#3:0xb65+0x124]
                      CreationTime: "2XjK3Q4AAAA="  [#3:0xb6c+0x29]
                      LastModificationTime: "2XjK3Q4AAAA="  [#3:0xb95+0x39]
                      LastAccessTime: "2XjK3Q4AAAA="  [#3:0xbce+0x2d]
                      ExpiryTime: "2XjK3Q4AAAA="  [#3:0xbfb+0x25]
                      Expires: "False"  [#3:0xc20+0x18]
                      UsageCount: "0"  [#3:0xc38+0x1a]
                      LocationChanged: "2XjK3Q4AAAA="  [#3:0xc52+0x2f]
                  ▾ String — 2 elements  [#3:0xc89+0x37]
                      Key: "Title"  [#3:0xc91+0x10]
                      Value: "Mailbox"  [#3:0xca1+0x16]
                  ▾ String — 2 elements  [#3:0xcc0+0x44]
                      Key: "UserName"  [#3:0xcc8+0x13]
                      Value: "alice@example.com"  [#3:0xcdb+0x20]
                  ▾ String — 2 elements  [#3:0xd04+0x4c]
                      Key: "Password"  [#3:0xd0c+0x13]
                    ▾ Value: "ELvgT6On" — Protected="True"  [#3:0xd1f+0x28]
                        @Protected: "True"  [#3:0xd31+0x4]
                        #text: "ELvgT6On"  [#3:0xd37+0x8]
                  ▾ String — 2 elements  [#3:0xd50+0x46]
                      Key: "URL"  [#3:0xd58+0xe]
                      Value: "imaps://mail.example.com"  [#3:0xd66+0x27]
                  ▾ AutoType — 4 elements  [#3:0xd96+0xd6]
                      Enabled: "True"  [#3:0xda0+0x17]
                      DataTransferObfuscation: "0"  [#3:0xdb7+0x34]
                      DefaultSequence  [#3:0xdeb+0x23]
                    ▾ Association — 2 elements  [#3:0xe0e+0x53]
                        Window  [#3:0xe1b+0x11]
                        KeystrokeSequence  [#3:0xe2c+0x27]
                  ▾ Binary — 2 elements  [#3:0xe6c+0x35]
                      Key: "hello.txt"  [#3:0xe74+0x14]
                    ▾ Value — Ref="0"  [#3:0xe88+0x10]
                        @Ref: "0"  [#3:0xe94+0x1]
                  ▾ History — 1 element  [#3:0xea1+0x383]
                    ▾ Entry — 8 elements  [#3:0xeaa+0x370]
                        UUID: "e0bWt/qXFx+JDq96mlfoNQ=="  [#3:0xeb1+0x25]
                      ▾ Times — 7 elements  [#3:0xed6+0x124]
                          CreationTime: "2XjK3Q4AAAA="  [#3:0xedd+0x29]
                          LastModificationTime: "2XjK3Q4AAAA="  [#3:0xf06+0x39]
                          LastAccessTime: "2XjK3Q4AAAA="  [#3:0xf3f+0x2d]
                          ExpiryTime: "2XjK3Q4AAAA="  [#3:0xf6c+0x25]
                          Expires: "False"  [#3:0xf91+0x18]
                          UsageCount: "0"  [#3:0xfa9+0x1a]
                          LocationChanged: "2XjK3Q4AAAA="  [#3:0xfc3+0x2f]
                      ▾ String — 2 elements  [#3:0xffa+0x37]
                          Key: "Title"  [#3:0x1002+0x10]
                          Value: "Mailbox"  [#3:0x1012+0x16]
                      ▾ String — 2 elements  [#3:0x1031+0x44]
                          Key: "UserName"  [#3:0x1039+0x13]
                          Value: "alice@example.com"  [#3:0x104c+0x20]
                      ▾ String — 2 elements  [#3:0x1075+0x4c]
                          Key: "Password"  [#3:0x107d+0x13]
                        ▾ Value: "Cop09s2H" — Protected="True"  [#3:0x1090+0x28]
                            @Protected: "True"  [#3:0x10a2+0x4]
                            #text: "Cop09s2H"  [#3:0x10a8+0x8]
                      ▾ String — 2 elements  [#3:0x10c1+0x46]
                          Key: "URL"  [#3:0x10c9+0xe]
                          Value: "imaps://mail.example.com"  [#3:0x10d7+0x27]
                      ▾ AutoType — 4 elements  [#3:0x1107+0xd6]
                          Enabled: "True"  [#3:0x1111+0x17]
                          DataTransferObfuscation: "0"  [#3:0x1128+0x34]
                          DefaultSequence  [#3:0x115c+0x23]
                        ▾ Association — 2 elements  [#3:0x117f+0x53]
                            Window  [#3:0x118c+0x11]
                            KeystrokeSequence  [#3:0x119d+0x27]
                      ▾ Binary — 2 elements  [#3:0x11dd+0x35]
                          Key: "hello.txt"  [#3:0x11e5+0x14]
                        ▾ Value — Ref="0"  [#3:0x11f9+0x10]
                            @Ref: "0"  [#3:0x1205+0x1]
                  ▾ String — 2 elements  [#3:0x1224+0x3c]
                      Key: "Notes"  [#3:0x122c+0x10]
                      Value: "changed once"  [#3:0x123c+0x1b]
              ▾ Entry — 9 elements  [#3:0x1270+0x3cb]
                  UUID: "ZLbQMUElFva9Q3/4KlJaLw=="  [#3:0x1277+0x25]
                ▾ Times — 7 elements  [#3:0x129c+0x124]
                    CreationTime: "2XjK3Q4AAAA="  [#3:0x12a3+0x29]
                    LastModificationTime: "2XjK3Q4AAAA="  [#3:0x12cc+0x39]
                    LastAccessTime: "2XjK3Q4AAAA="  [#3:0x1305+0x2d]
                    ExpiryTime: "2XjK3Q4AAAA="  [#3:0x1332+0x25]
                    Expires: "False"  [#3:0x1357+0x18]
                    UsageCount: "0"  [#3:0x136f+0x1a]
                    LocationChanged: "2XjK3Q4AAAA="  [#3:0x1389+0x2f]
                ▾ String — 2 elements  [#3:0x13c0+0x37]
                    Key: "Title"  [#3:0x13c8+0x10]
                    Value: "Example"  [#3:0x13d8+0x16]
                ▾ String — 2 elements  [#3:0x13f7+0x38]
                    Key: "UserName"  [#3:0x13ff+0x13]
                    Value: "alice"  [#3:0x1412+0x14]
                ▾ String — 2 elements  [#3:0x142f+0x58]
                    Key: "Password"  [#3:0x1437+0x13]
                  ▾ Value: "8nkbxDIssVlMOfd5NQ==" — Protected="True"  [#3:0x144a+0x34]
                      @Protected: "True"  [#3:0x145c+0x4]
                      #text: "8nkbxDIssVlMOfd5NQ=="  [#3:0x1462+0x14]
                ▾ String — 2 elements  [#3:0x1487+0x47]
                    Key: "URL"  [#3:0x148f+0xe]
                    Value: "https://example.com/login"  [#3:0x149d+0x28]
                ▾ AutoType — 4 elements  [#3:0x14ce+0xd6]
                    Enabled: "True"  [#3:0x14d8+0x17]
                    DataTransferObfuscation: "0"  [#3:0x14ef+0x34]
                    DefaultSequence  [#3:0x1523+0x23]
                  ▾ Association — 2 elements  [#3:0x1546+0x53]
                      Window  [#3:0x1553+0x11]
                      KeystrokeSequence  [#3:0x1564+0x27]
                ▾ String — 2 elements  [#3:0x15a4+0x47]
                    Key: "PIN"  [#3:0x15ac+0xe]
                  ▾ Value: "FDLojQ==" — Protected="True"  [#3:0x15ba+0x28]
                      @Protected: "True"  [#3:0x15cc+0x4]
                      #text: "FDLojQ=="  [#3:0x15d2+0x8]
                ▾ String — 2 elements  [#3:0x15eb+0x48]
                    Key: "Account"  [#3:0x15f3+0x12]
                  ▾ Value: "A-17" — Protected="False"  [#3:0x1605+0x25]
                      @Protected: "False"  [#3:0x1617+0x5]
                      #text: "A-17"  [#3:0x161e+0x4]
            ▾ Group — 3 elements  [#3:0x1643+0x16a]
                UUID: "saFuF759EV6V1HbVoSMD+w=="  [#3:0x164a+0x25]
              ▾ Times — 7 elements  [#3:0x166f+0x124]
                  CreationTime: "2XjK3Q4AAAA="  [#3:0x1676+0x29]
                  LastModificationTime: "2XjK3Q4AAAA="  [#3:0x169f+0x39]
                  LastAccessTime: "2XjK3Q4AAAA="  [#3:0x16d8+0x2d]
                  ExpiryTime: "2XjK3Q4AAAA="  [#3:0x1705+0x25]
                  Expires: "False"  [#3:0x172a+0x18]
                  UsageCount: "0"  [#3:0x1742+0x1a]
                  LocationChanged: "2XjK3Q4AAAA="  [#3:0x175c+0x2f]
                Name: "Empty"  [#3:0x1793+0x12]
            ▾ Entry — 8 elements  [#3:0x17ad+0x36a]
                UUID: "NDO1HRP9EAmEUgKbd/iJBQ=="  [#3:0x17b4+0x25]
              ▾ Times — 7 elements  [#3:0x17d9+0x124]
                  CreationTime: "2XjK3Q4AAAA="  [#3:0x17e0+0x29]
                  LastModificationTime: "2XjK3Q4AAAA="  [#3:0x1809+0x39]
                  LastAccessTime: "2XjK3Q4AAAA="  [#3:0x1842+0x2d]
                  ExpiryTime: "2XjK3Q4AAAA="  [#3:0x186f+0x25]
                  Expires: "False"  [#3:0x1894+0x18]
                  UsageCount: "0"  [#3:0x18ac+0x1a]
                  LocationChanged: "2XjK3Q4AAAA="  [#3:0x18c6+0x2f]
              ▾ String — 2 elements  [#3:0x18fd+0x36]
                  Key: "Title"  [#3:0x1905+0x10]
                  Value: "Router"  [#3:0x1915+0x15]
              ▾ String — 2 elements  [#3:0x1933+0x38]
                  Key: "UserName"  [#3:0x193b+0x13]
                  Value: "admin"  [#3:0x194e+0x14]
              ▾ String — 2 elements  [#3:0x196b+0x50]
                  Key: "Password"  [#3:0x1973+0x13]
                ▾ Value: "TLOOUAdMDA==" — Protected="True"  [#3:0x1986+0x2c]
                    @Protected: "True"  [#3:0x1998+0x4]
                    #text: "TLOOUAdMDA=="  [#3:0x199e+0xc]
              ▾ String — 2 elements  [#3:0x19bb+0x41]
                  Key: "URL"  [#3:0x19c3+0xe]
                  Value: "http://192.168.0.1/"  [#3:0x19d1+0x22]
              ▾ String — 2 elements  [#3:0x19fc+0x3d]
                  Key: "Notes"  [#3:0x1a04+0x10]
                  Value: "Behind the TV"  [#3:0x1a14+0x1c]
              ▾ AutoType — 4 elements  [#3:0x1a39+0xd6]
                  Enabled: "True"  [#3:0x1a43+0x17]
                  DataTransferObfuscation: "0"  [#3:0x1a5a+0x34]
                  DefaultSequence  [#3:0x1a8e+0x23]
                ▾ Association — 2 elements  [#3:0x1ab1+0x53]
                    Window  [#3:0x1abe+0x11]
                    KeystrokeSequence  [#3:0x1acf+0x27]
            DeletedObjects  [#3:0x1b1f+0x11]
    ▾ Database — 4 groups, 3 entries  [#3:0x73+0x1ad2]
      ▾ Meta  [#3:0x80+0x5b0]
          Generator: "KeePassXC"  [#3:0x86+0x20]
          DatabaseName: "Passwords"  [#3:0xa6+0x26]
          MaintenanceHistoryDays: "365"  [#3:0x1ad+0x34]
          RecycleBinEnabled: "True"  [#3:0x358+0x2b]
          HistoryMaxItems: "10"  [#3:0x4f9+0x25]
          HistoryMaxSize: "6291456"  [#3:0x51e+0x28]
      ▾ Root — 2 groups, 1 entry  [#3:0x636+0x14e9]
        ▾ Web — 1 group, 1 entry  [#3:0x878+0xdcb]
          ▾ Mail — 0 groups, 1 entry  [#3:0x9d8+0x898]
            ▾ Mailbox — alice@example.com — imaps://mail.example.com  [#3:0xb39+0x72f]
                Title: "Mailbox"  [#3:0xca1+0x16]
                UserName: "alice@example.com"  [#3:0xcdb+0x20]
                Password — protected  [#3:0xd1f+0x28]
                URL: "imaps://mail.example.com"  [#3:0xd66+0x27]
                Notes: "changed once"  [#3:0x123c+0x1b]
                Attachment hello.txt — binary #0  [#3:0xe88+0x10]
              ▾ History — 1 revision
                ▾ Revision: Mailbox — alice@example.com — imaps://mail.example.com  [#3:0xeaa+0x370]
                    Title: "Mailbox"  [#3:0x1012+0x16]
                    UserName: "alice@example.com"  [#3:0x104c+0x20]
                    Password — protected  [#3:0x1090+0x28]
                    URL: "imaps://mail.example.com"  [#3:0x10d7+0x27]
                    Attachment hello.txt — binary #0  [#3:0x11f9+0x10]
          ▾ Example — alice — https://example.com/login  [#3:0x1270+0x3cb]
              Title: "Example"  [#3:0x13d8+0x16]
              UserName: "alice"  [#3:0x1412+0x14]
              Password — protected  [#3:0x144a+0x34]
              URL: "https://example.com/login"  [#3:0x149d+0x28]
              PIN — protected  [#3:0x15ba+0x28]
              Account: "A-17"  [#3:0x1605+0x25]
        ▾ Empty — 0 groups, 0 entries  [#3:0x1643+0x16a]
        ▾ Router — admin — http://192.168.0.1/  [#3:0x17ad+0x36a]
            Title: "Router"  [#3:0x1915+0x15]
            UserName: "admin"  [#3:0x194e+0x14]
            Password — protected  [#3:0x1986+0x2c]
            URL: "http://192.168.0.1/"  [#3:0x19d1+0x22]
            Notes: "Behind the TV"  [#3:0x1a14+0x1c]
